2023-03-08  dyuret  <dyuret@login03.kuacc.ku.edu.tr>

	* TODO:
	- try rnn
	- Print out confusion matrix, esp for ABC.
	- Inputs: Emphasize the differences using a smart scaled difference functions (careful about episode boundaries and 2pi angle differences).
	- Inputs: try different subsets
	- Inputs: try different representations (voxels & convolution?)
	- validate rel_actions formula
	- try tensorboard


2023-03-07  dyuret  <dyuret@login03.kuacc.ku.edu.tr>

	* MLP-Summary:
	trn		abcval	abcval1	dval	dval1
	---		------	-------	----	-----
	ABCD-32x32	.9577	.9604	.8935	.9070
	ABCD-1x32	.5306	.9890	.4319	.9199
	ABCD-32x4	.9113	.8418	.8810	.8299
	ABCD-32x1	.8711	.7939	.8378	.7893
	ABC-32x32	.6136	.5832	.5854	.5658
	ABC-1x32	.3329	.7121	.2848	.6469
	ABC-32x4	.6403	.5915	.6159	.5697
	ABC-32x1	.6380	.6109	.6060	.5687
	D-32x32		.8968	.8905	.8827	.8892
	D-1x32   	.5507	.9154	.4623	.9426
	D-32x4   	.8969	.8151	.8817	.8051
	D-32x1   	.8764	.7884	.8667	.7784

	Notes:
	- ABC-32x4 means 32 instances per episode from its last 32 frames, each instance has a 4 frame context.
	- abcval evaluates accuracy on the last 32 frames of each episode, abcval1 evaluates only on the last frame.
	- ABCD and ABC used earlystop based on abcval, D used earlystop based on dval.
	- D contains training instances only from D, ABC from A,B,C and ABCD is a union of the two training sets.
	- The validation sets contain instances only from D (disjoint from training).
	- abcval and abcdval has the same language annotations, dval has different language annotations.

	* TODO:
	+ Train a 32x32 model.

2023-03-06  dyuret  <dyuret@login03.kuacc.ku.edu.tr>

	* +: See how episode-based (ABCD) model does on an individual frame basis.
	>>> for i in [1,2,4,8,16,32]:
	...   d = ld.calvindataset("../data/ABC-validation", instances_per_episode=i, context_length=32)
	...   print('instances per episode = ', i)
	...   tr.validate(m1, DataLoader(d, batch_size=32))